agregado de imagen a add product

--- a/views/DBDetalle.ejs
+++ b/views/DBDetalle.ejs
@@ -60,7 +60,7 @@
         <div class="main_borrar  col-6">
           
           <% //if (logeadoUser) { %>
-            <form id="eliminar" action="/products/delete/<%=juego.id%>?_method=DELETE" method="POST">
+            <form id="eliminar" action="/products/borrar/<%=juego.id%>" method="POST">
               <img src="/images/admin/borrar.png" alt=""> 
           <button type="submit" class="btn-eliminar">Eliminar</button>
         </div>
