--- a/views/DBaddProduct.ejs
+++ b/views/DBaddProduct.ejs
@@ -22,7 +22,7 @@
                 <div class="card col-12">
                     <div class="card-body">
                       <h2 class="col-12">AGREGAR PRODUCTO</h2>
-                        <form action="/products/crear" method="POST">
+                        <form action="/products/crear" method="POST" enctype="multipart/form-data">
                             <div class="form-group">
                               <label for="name">Nombre de producto</label>
                               <input name="name" type="name" class="form-control" id="name" placeholder="Producto">
