--- a/views/DBProducts.ejs
+++ b/views/DBProducts.ejs
@@ -15,7 +15,9 @@
                 <hr>
               </div>
               <% for( let i = 0; i < juegos.length; i++ ) { %>
-               
+               <% if (juegos[i].state != "Inactive") { %>
+                
+              
                     <div class="card col-dm-3 d-flex justify-content-around m-4" style="width: 18rem;">
                       <img class="card-img-top" src="/images/product-games/<%= juegos[i].image %>" alt="Card image cap">
                       <div class="card-body">
@@ -31,12 +33,12 @@
                           </p>
                             <strong class="precio">
                               $<%= juegos[i].price %>
-                              
                             </strong>
                             <hr>
                         <a href="/products/<%= juegos[i].id %>" class="btn btn-primary offset-4">Comprar</a>
                       </div>
                     </div>
+                    <% } %>
               <% } %>
             </section>
 
