--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
                   </p>
                     <strong class="precio">$<%= recomendados[i].price %></strong>
                     <hr>
-                <!--<button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary offset-4">Comprar</a>-->
+                <button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary offset-4">Comprar</a>
               </div>
             </div>
             <% } %> 
@@ -93,7 +93,7 @@
                     </p>
                     <strong class="precio">$<%= masComprados.price %> </strong>
                     <hr>
-                    <a href="/products/<%= juegos[i].id %>" class="btn btn-primary offset-4">Comprar</a>
+                    <a href="/products/" class="btn btn-primary offset-4">Comprar</a>
                   </div>
                 </div>
                 <% }) %>
