--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -3,27 +3,48 @@
   <%- include('./partials/head') %>
 
   <body>
-    <div class="container-fluid">
-      <!--HEADER-->
-    
-      <!--MENU-->
-     
-      <!--  CONTENIDO -->
+    <body>
+      <div class="container-fluid">
+          <%- include('./partials/header') %>
+          <%- include('./partials/navbar') %>
+
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>cantidad:<%= carrito.total %></p>
-            <p><%= comprado.name %></p>
-            <p><%= comprado.price %></p>
-            <p>subtotal</p>
-            <p>eliminar</p>
+            <h1>USUARIO: <%= user.email %> </h1>
+            <h2>COMPRA N°: <%= carrito.id %></h2>
+            <h3>TOTAL: <%= carrito.total %></h2>
+
+            <table class="table table-borderless">
+              <thead>
+                <tr>
+                  <th scope="col">Id Producto</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Precio</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% cartGameLista.forEach(element => { %>
+                <tr>
+                  <th scope="row"><%= element.game_id %></th>
+                  <td><%= element.games.name %></td>
+                  <td><%= element.price %></td>
+                  <td><svg width="24px" height="24px" viewBox="0 0 24 24" class="bi bi-trash" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                  </svg></td>
+                </tr>
+                <% }) %>
+              </tbody>
+            </table>
           </div>
          
         </div>
       </div>
     
     </div>
-
+    <a href="/" target="_self">Seguir comprando</a>
     <%- include('./partials/scripts') %>
   </body>
 </html>
