--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
                   </p>
                     <strong class="precio">$<%= oferta.price %></strong>
                     <hr>
-                <!--<button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary offset-4">Comprar</a>-->
+                <button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary offset-4">Comprar</a>
               </div>
             </div>
           <% }) %>
