Subiendo responsive index

--- a/public/scss/home.css
+++ b/public/scss/home.css
@@ -10,7 +10,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 50px;
 }
 
 .container-fluid header nav ul li {
@@ -54,75 +53,15 @@
   color: #000000;
 }
 
-.container-fluid header .gamefound {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: absolute;
-  left: 0;
-  z-index: 100;
-  height: 40vh;
-  overflow-y: scroll;
-  scrollbar-color: 1px red;
-  scrollbar-width: thin;
-  background: white;
-  padding: 20px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 3px black;
-          box-shadow: 0px 0px 3px black;
-}
-
-.container-fluid header .gamefound .active {
-  display: none;
-}
-
-.container-fluid header .gamefound::-webkit-scrollbar {
-  display: none;
-  /* Ocultar scroll */
-}
-
-.container-fluid header .gamefound::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 4px;
-}
-
-.container-fluid header .gamefound img {
-  width: 150px;
-}
-
-.container-fluid header form .search {
-  background: #ffffff;
-  padding: 10px;
-  width: 50%;
-  border: none;
-  border-bottom: 1px solid white;
-  color: red;
-  border-radius: 5px;
-}
-
-.container-fluid header form button {
-  top: 10px;
-  left: 270px;
-  border: none;
-  background: #ffffff;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.container-fluid header form button .fa-search {
-  color: red;
-}
-
 .container-fluid .carousel {
   padding: 0;
   margin: 0;
+  background: #5c5858;
+}
+
+.container-fluid .carousel .carousel-item img {
+  width: 85% !important;
+  margin: 0 auto;
 }
 
 .container-fluid .titulo-product {
@@ -147,20 +86,41 @@
   font-family: "Baloo Paaji 2", cursive;
 }
 
+.container-fluid section .card-container {
+  background: white;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 0px 10px black;
+          box-shadow: 0px 0px 10px black;
+  text-align: center;
+}
+
+.container-fluid section .card-container .image-card {
+  width: 100px;
+  border-radius: 5px;
+}
+
 .container-fluid section .card-img-top {
-  width: 100%;
+  width: 60%;
+  margin: 10px auto;
 }
 
 .container-fluid section .btn {
   background: #ef233c;
   border: 1px solid #000000;
-  -webkit-transition: ease-in-out 0.5s;
-  transition: ease-in-out 0.5s;
+  -webkit-transition: ease-in-out 0.2s;
+  transition: ease-in-out 0.2s;
 }
 
 .container-fluid section .btn:hover {
   background: #cacaca;
   color: #000000;
+}
+
+.container-fluid section .card {
+  -webkit-box-shadow: 0px 0px 5px black;
+          box-shadow: 0px 0px 5px black;
 }
 
 .container-fluid section .card:hover {
@@ -170,10 +130,6 @@
   transition: ease-in-out 0.3s;
 }
 
-.container-fluid section .mas-vendidos {
-  background: blue;
-}
-
 .container-fluid section .precio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -181,7 +137,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .container-fluid #top-venta {
@@ -194,26 +150,32 @@
   width: 100vw;
 }
 
-.container-fluid #top-venta #contenedorc {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (auto)[4];
-      grid-template-columns: repeat(4, auto);
-  gap: 20px;
+.container-fluid #top-venta .contenedorcard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-@media (max-width: 330px) {
+@media (max-width: 360px) {
+  footer {
+    margin: 0;
+    padding: 0;
+  }
   header form .search {
     margin-left: 60px;
   }
   header form .search input {
     width: 100% !important;
   }
-  nav {
-    margin-right: 100px;
+  section {
+    text-align: center;
   }
-  .card .card-img-top {
-    width: 20px;
+  .card .card-title {
+    font-size: 14px;
   }
 }
 /*# sourceMappingURL=home.css.map */
