--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -15,9 +15,9 @@
             <h2>COMPRA N°: <%= carrito.id %></h2>
             <h3>TOTAL: <%= carrito.total %></h2>
 
-            <table class="table table-borderless">
+            <table class="table table-borderless-dark">
               <thead>
-                <tr>
+                <tr class="dark">
                   <th scope="col">Id Producto</th>
                   <th scope="col">Nombre</th>
                   <th scope="col">Precio</th>
