--- a/views/DBProducts.ejs
+++ b/views/DBProducts.ejs
@@ -35,7 +35,7 @@
                               $<%= juegos[i].price %>
                             </strong>
                             <hr>
-                        <a href="/products/<%= juegos[i].id %>" class="btn btn-primary offset-4">Comprar</a>
+                        <a href="/products/<%= juegos[i].id %>" class="btn btn-primary offset-4">Ver detalle</a>
                       </div>
                     </div>
                     <% } %>
