--- a/views/DBaddProduct.ejs
+++ b/views/DBaddProduct.ejs
@@ -14,7 +14,7 @@
       <div class="card col-5 m-auto">
         <div class="card-body">
           <h2 class="col-12">AGREGAR PRODUCTO</h2>
-          <form action="/products/crear" method="POST">
+          <form action="/products/crear" method="POST" enctype="multipart/form-data">
             <div class="form-group">
               <label for="name">Nombre de producto</label>
               <input
@@ -173,7 +173,7 @@
             </div>
 
             <label for="image">Imagen de portada:</label>
-            <input class="form-control" type="file" name="image" />
+            <input type="file" name="image">
 
             <button type="submit" class="mt-4">Enviar</button>
           </form>
