--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,25 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+<%- include('./partials/head') %>
+
+<body>
+    <div class="container-fluid">
+        <%- include('./partials/header') %>
+        <%- include('./partials/navbar') %>
+
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <img src="/images/Empty.png">
+            </div>
+        </div>
+
+
+        <%- include('./partials/footer') %>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</body>
+
+</html>
