--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,11 +39,13 @@
           <div class="titulo-product col-12">
           
             <h5 class="estilo-fuente-1">🎮JUEGOS  <mark class="estilo-fuente-2">RECOMENDADOS</mark></h5>
-            <hr>
+            
           </div>
+          
           <!--CAJA RECOMENDADOS-->
+
           <% for( let i = 0; i < recomendados.length; i++ ) { %>
-            <div class="card col-dm-3 mb-3" style="width: 18rem;">
+            <div class="card col-dm-3 mb-3 text-center" style="width: 18rem;">
               <img class="card-img-top" src="/images/product-games/<%= recomendados[i].image %>  " alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title"><%= recomendados[i].name %></h5>
@@ -60,12 +62,14 @@
                       
                   </p>
                     <strong class="precio">$<%= recomendados[i].price %></strong>
-                    <hr>
-                <button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary offset-4">Comprar</a>
+                    
+                
               </div>
+              <button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary ">Comprar</a>
             </div>
             <% } %> 
           <!--CAJA RECOMENDADOS FINAL-->
+          
           <!-- TOP VENTAS -->
           <div class="row justify-content-around" id="top-venta">
             <!-- TITTLE PRODUCT -->
@@ -74,27 +78,27 @@
               <hr>
             </div>
             <!--CAJA 1-->
-            <div id="contenedorc">
+            <div class="contenedorcard col-12">
             <% vendidos.forEach(masComprados => { %>
 
-                <div class="card  col-dm-3  mb-3" style="width: 18rem;">
+                <div class="card text-center col-5 col-dm-3 col-lg-2 mb-3 mr-3" style="width: 18rem;">
                   <img class="card-img-top" src="/images/product-games/<%= masComprados.image  %>   " alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title"><%= masComprados.name %> </h5>
                   
                   
-                  <hr>
+                  
                   <% distributor.forEach(distribuidor => { %>
                     <% if (distribuidor.id == masComprados.distributor_id) { %>
-                      <strong>Desarrollador: </strong><%= distribuidor.name %>
+                      <p  class="col d-none"><strong>Desarrollador: </strong><%= distribuidor.name %></p>
                       <% } %>
                       <% }) %>
                       <hr>
                     </p>
                     <strong class="precio">$<%= masComprados.price %> </strong>
-                    <hr>
-                    <a href="/products/" class="btn btn-primary offset-4">Comprar</a>
+                    
                   </div>
+                  <a href="/products/" class="btn ">Comprar</a>
                 </div>
                 <% }) %>
               </div>
@@ -102,11 +106,10 @@
           <!--OFERTAS-->
           <div class="titulo-product col-12">
             <h5 class="estilo-fuente-1">🏴‍☠️OFERTAS <mark class="estilo-fuente-2">SEMANALES</mark></h5>
-            <hr>
           </div>
           <!--CAJA 1-->
           <% ofertas.forEach(oferta => { %>
-            <div class="card col-dm-3 mb-3" style="width: 18rem;">
+            <div class="card text-center col-dm-3 mb-3" style="width: 18rem;">
               <img class="card-img-top" src="/images/product-games/<%= oferta.image %>  " alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title"><%= oferta.name %></h5>
@@ -121,14 +124,16 @@
                     <%});%>
                   </p>
                     <strong class="precio">$<%= oferta.price %></strong>
-                    <hr>
-                <!--<button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary offset-4">Comprar</a>-->
+                <button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           <% }) %>
         </section>
         <%- include('./partials/footer') %> 
-    </div>
+      </div>
+
+      
+     
     <script src="/javascript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
