Agregandole funcionalidad a Listar carritos en Admin

--- a/views/partials/sideBar.ejs
+++ b/views/partials/sideBar.ejs
@@ -10,7 +10,7 @@
       
       <ul>
         <h6><strong>CARRITO</strong></h6>
-        <li><a href=""></a>Historial</li>
+        <li><a href="/admin/listarCarts">Historial</a></li>
         <li><a href=""></a>Cerrados</li>
       </ul> 
 
