--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -1,7 +1,11 @@
 .container-fluid{
     position: relative;
     header {
+        height: 105px;
         nav{
+            margin-top: 35px;
+            margin-right: 125px;
+            text-transform: uppercase;
             ul{
                 display: flex;
                 li{
@@ -19,7 +23,10 @@
             align-items: center;
             color: white;
             .logo{
-                width: 100px;
+                position: absolute;
+                z-index: 999;
+                width: 230px;
+                top: -34px;    
             }
         }
     background: #d90429;
@@ -43,7 +50,6 @@
     
     .carousel-item {
         img{
-            width: 85%!important;
             margin: 0 auto;
         }
     }
@@ -51,6 +57,7 @@
 
 .titulo-product{
     margin: 5px 0px;
+    margin-top: -1px;
     font-family: "Baloo Paaji 2", cursive;
     .estilo-fuente-1{
         font-size: 30px;
@@ -66,6 +73,7 @@
 section{
     background: rgba(239, 35, 60, 1);
     font-family: "Baloo Paaji 2", cursive;
+    
     .card-container {
         background: white;
         padding: 20px;
@@ -83,10 +91,17 @@ section{
         width: 60%;
         margin: 10px auto;
     }
+    .card-body{
+        padding:0
+    }
     .btn{
         background: rgba(239, 35, 60, 1);
         border: 1px solid #000000;
         transition: ease-in-out 0.2s;
+        font-size: 20px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        text-transform: uppercase;
         &:hover{
             background: rgba(202, 202, 202, 1);
             color: #000000;
@@ -158,8 +173,10 @@ section{
 
 
     .card{
+       
         .card-title{
             font-size: 14px;
+            
         }     
        
     }
