--- a/views/DBProducts.ejs
+++ b/views/DBProducts.ejs
@@ -11,7 +11,7 @@
         <%- //include('./partials/navbar')%>
         <section class="row justify-content-around">
             <div class="titulo-product col-12">
-                <h5 class="estilo-fuente-1">TODOS <mark class="estilo-fuente-2">LOS PRODUCTOS</mark></h5>
+                <h5 class="estilo-fuente-1 text-center">TODOS <mark class="estilo-fuente-2">LOS PRODUCTOS</mark></h5>
                 <hr>
               </div>
               <% for( let i = 0; i < juegos.length; i++ ) { %>
