--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -46,6 +46,11 @@
     </div>
     <a href="/" target="_self">Seguir comprando</a>
     <!--Finalizar compra (redirige al checkout)-->
+    <form action="/cart/closed" method="post">
+      <input type="hidden" name="cart_name" value="<%= carrito.id %> ">
+      <button class="btn btn-success" type="submit">Finalizar Compra</button>
+    </form>
+
     <%- include('./partials/scripts') %>
   </body>
 </html>
