--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
                   </p>
                     <strong class="precio">$<%= recomendados[i].price %></strong>
                     <hr>
-                <button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary offset-4">Comprar</a>
+                <button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary offset-4">Comprar</a></button>
               </div>
             </div>
             <% } %> 
@@ -122,7 +122,7 @@
                   </p>
                     <strong class="precio">$<%= oferta.price %></strong>
                     <hr>
-                <!--<button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary offset-4">Comprar</a>-->
+                <button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary offset-4">Comprar</a>
               </div>
             </div>
           <% }) %>
