--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,6 +46,7 @@
               </div>
               
             </form>
+            <p class="mt-2">Si no tenés usuario, registrate <a href="/user/register">aquí</a></p>
           </div>
                 
                     
