--- a/public/scss/home.css
+++ b/public/scss/home.css
@@ -121,7 +121,6 @@
 }
 
 .container-fluid section .btn {
-  background: #ef233c;
   border: 1px solid #000000;
   -webkit-transition: ease-in-out 0.2s;
   transition: ease-in-out 0.2s;
@@ -131,9 +130,17 @@
   text-transform: uppercase;
 }
 
-.container-fluid section .btn:hover {
+.container-fluid section .btn-primary {
+  background: #ef233c;
+}
+
+.container-fluid section .btn-primary:hover {
   background: #cacaca;
   color: #000000;
+}
+
+.container-fluid section .btn-detail {
+  background: #f3ca16;
 }
 
 .container-fluid section .card {
