--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -95,17 +95,23 @@ section{
         padding:0
     }
     .btn{
-        background: rgba(239, 35, 60, 1);
         border: 1px solid #000000;
         transition: ease-in-out 0.2s;
         font-size: 20px;
         font-weight: bold;
         letter-spacing: 1px;
         text-transform: uppercase;
+       
+    }
+    .btn-primary{
+        background: rgba(239, 35, 60, 1);
         &:hover{
             background: rgba(202, 202, 202, 1);
             color: #000000;
         }
+    }
+    .btn-detail{
+        background: rgb(243, 202, 22);
     }
     .card{
         box-shadow: 0px 0px 5px black;
