--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -13,8 +13,6 @@
           <div class="col-12">
             <h1>USUARIO: <%= user.email %> </h1>
             <h2>COMPRA N°: <%= carrito.id %></h2>
-            <h3>TOTAL: <%= carrito.total %></h2>
-
             <table class="table table-borderless-dark">
               <thead>
                 <tr class="dark">
@@ -23,13 +21,13 @@
                   <th scope="col">Precio</th>
                   <th scope="col"></th>
                 </tr>
-              </thead>
-              <tbody>
+                </thead>
+                <tbody>
                 <% cartGameLista.forEach(element => { %>
                 <tr>
                   <th scope="row"><%= element.game_id %></th>
                   <td><%= element.games.name %></td>
-                  <td><%= element.price %></td>
+                  <td>ARS <%= element.price %></td>
                   <td><a href="/cart/delete/<%= element.id %>"><svg width="24px" height="24px" viewBox="0 0 24 24" class="bi bi-trash" fill="#000000" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                     <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -39,17 +37,31 @@
               </tbody>
             </table>
           </div>
-         
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-12 text-right">
+            <h3>TOTAL: ARS <%= carrito.total %></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 text-right">
+            <a href="/" target="_self" class="btn btn-secondary mb-4">Seguir comprando</a>
+          </div>
+        </div>
+        <!--Finalizar compra (redirige al checkout)-->
+        <div class="row">
+          <div class="col-12 text-right">
+            <form action="/cart/closed" method="post">
+              <input type="hidden" name="cart_name" value="<%= carrito.id %> ">
+              <button class="btn btn-success" type="submit">Finalizar Compra</button>
+            </form>
+          </div>
         </div>
       </div>
     
     </div>
-    <a href="/" target="_self">Seguir comprando</a>
-    <!--Finalizar compra (redirige al checkout)-->
-    <form action="/cart/closed" method="post">
-      <input type="hidden" name="cart_name" value="<%= carrito.id %> ">
-      <button class="btn btn-success" type="submit">Finalizar Compra</button>
-    </form>
+    
 
     <%- include('./partials/scripts') %>
   </body>
