--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
                     <strong class="precio">$<%= masComprados.price %> </strong>
                     
                   </div>
-                  <a href="/products/" class="btn ">Comprar</a>
+                  <button onclick="clickear(<%= masComprados.id %>)" class="btn btn-primary">Comprar</a>
                 </div>
                 <% }) %>
               </div>
@@ -102,7 +102,25 @@
         </section>
         <%- include('./partials/footer') %> 
       </div>
-
+      <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Atención!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Logueate para continuar comprando</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <a href="/user/login" class="btn btn-success">Registrate</a>
+            </div>
+          </div>
+        </div>
+      </div>
       
      
     <script src="/javascript/app.js"></script>
@@ -114,7 +132,8 @@
         if(userLoggedFront){
           window.location.href = "/cart/add/" + element;
         }else{
-          alert("Registrate para seguir comprando")
+          //alert("Registrate para seguir comprando")
+          $('#cartModal').modal('show')
         }
         console.log(element)
         console.log(userLoggedFront)
