Creando metodo Ver carrito en el Admin

--- a/views/cartsList.ejs
+++ b/views/cartsList.ejs
@@ -39,7 +39,7 @@
               <td><%= element.total %> </td>
               <td><%= element.state %> </td>
                 <td>
-                    <button class="btn btn-success" type="submit">VER CARRITO</button>
+                    <a href="/admin/verCart/<%= element.id %>" class="btn btn-success">VER CARRITO</a>
                 </td>
             </tr>
           <% }) %>
