--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -19,6 +19,13 @@
 .sidebar ul li{
     list-style: none;
 }
+.sidebar h1{
+    margin-top: 50px;
+}
+
+h3{
+    margin-top:50px;
+}
 
 .sidebar strong{
     color: yellow;
