--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,7 +116,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <a href="/user/login" class="btn btn-success">Registrate</a>
+              <a href="/user/login" class="btn btn-success">Logueate</a>
             </div>
           </div>
         </div>
