--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,6 +15,6 @@
     <link rel="stylesheet" href="/stylesheets/menu.css">
     <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/scss/registry.css">
-
+    <link rel="stylesheet" href="/scss/front.css">
     <title>Game Over </title>
 </head>
