--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -146,6 +146,7 @@ section{
 
 
 @media (max-width: 360px){
+    .container-fluid{
     footer{
         margin: 0;
         padding: 0;
@@ -180,4 +181,5 @@ section{
         }     
        
     }
+}
 }
