--- a/views/perfilUser.ejs
+++ b/views/perfilUser.ejs
@@ -48,8 +48,30 @@
                 <div class="col-sm-9">
                     <h5>Datos a editar:</h5>
                     <hr>
+                    <div class="front">
+                        <div class="modal" tabindex="-1" role="dialog">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title">Modal title</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                  <p>Modal body text goes here.</p>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-primary">Save changes</button>
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        
+                    </div>
                     <!--FORMULARIO-->
-                    <form  action="/user/perfilUser" method="post" enctype="multipart/form-data">
+                    <form  action="/user/perfilUser/<%= user.id %>" method="post" enctype="multipart/form-data" id="editUser"
                         <!--NOMBRE-->
                         <div class="col-xs-6">
                             <label for="first_name">
@@ -72,7 +94,7 @@
                             <label for="avatar">
                                 <h4>Avatar</h4>
                             </label>
-                            <input type="file" class="form-control" name="file" id="file">
+                            <input type="file" class="form-control" name="avatar" id="file">
                         </div>
                         <!--CONTRASEÑA-->
                         <div class="col-xs-6">
@@ -85,8 +107,7 @@
                         <!--GUARDAR-->
                         <div class="col-xs-12">
                             <br>
-                            <button class="btn btn-lg btn-success" type="submit"><i
-                                    class="glyphicon glyphicon-ok-sign"></i> Guardar</button>
+                            <button class="btn btn-lg btn-success" type="submit" id="enviar"></i> Guardar</button>
                         </div>
                     </form>
                 </div>
@@ -97,9 +118,7 @@
     </div>
    
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <%- include('./partials/scripts') %> 
 </body>
 
 </html>
