Arreglando detalle producto

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -16,5 +16,6 @@
     <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/scss/registry.css">
     <link rel="stylesheet" href="/scss/front.css">
+    <link rel="stylesheet" href="/scss/detalle.css">
     <title>Game Over </title>
 </head>
