--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -2,3 +2,5 @@
 <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <script src="/javascript/app.js"></script>
+<script src="/javascript/productosValidator.js"></script>
+
