--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,6 +139,8 @@
         console.log(userLoggedFront)
       }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="js/alertCarritoVacio.js"></script>
 </body>
 
 </html>
