Header, NavBar responsive

--- a/public/scss/home.css
+++ b/public/scss/home.css
@@ -8,8 +8,6 @@
 }
 
 .container-fluid header nav {
-  margin-top: 35px;
-  margin-right: 125px;
   text-transform: uppercase;
 }
 
@@ -41,11 +39,21 @@
   color: white;
 }
 
-.container-fluid header .c-logo .logo {
+.container-fluid header .logo {
   position: absolute;
   z-index: 999;
   width: 230px;
   top: -34px;
+}
+
+.container-fluid header .navbar-nav {
+  padding-left: 165px;
+}
+
+.container-fluid header .navbar-light .navbar-nav .nav-link {
+  color: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-weight: bold;
 }
 
 .container-fluid header .input-group {
@@ -204,7 +212,7 @@
   }
 }
 
-@media (max-width: 580px) {
+@media (max-width: 992px) {
   .container-fluid header {
     height: initial;
   }
@@ -213,5 +221,46 @@
     width: 100px;
     top: 0;
   }
+  .table .eliminar {
+    width: 30px;
+  }
+  .table .nombre {
+    width: 30px;
+  }
+  .table .precio {
+    width: 30px;
+  }
+  .text-center-xs {
+    text-align: center !important;
+  }
+  .table-cart {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .container-fluid header .logo {
+    max-width: 135px;
+    position: relative !important;
+    top: -27px;
+  }
+  .navbar-brand {
+    height: 56px;
+  }
+  .container-fluid header .navbar-nav {
+    padding-left: 0;
+    padding-top: 40px;
+  }
+  .navbar {
+    width: 100%;
+  }
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.5);
 }
 /*# sourceMappingURL=home.css.map */
