--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer row d-flex justify-content-center align-item-center">   
-    <div class="footer__redes col-12 col-sm-12 col-md-12 col-lg-4 align-self-center offset-1">
+    <div class="footer__redes col-12 col-sm-12 col-md-12 col-lg-4 align-self-center text-center mt-2">
       <a href=""><i class="fab fa-facebook" id="fc"></i></a>
       <a href=""><i class="fab fa-twitter-square" id="twt"></i></a>
       <a href=""><i class="fab fa-instagram" id="ins"></i></a>
