--- a/public/scss/front.css
+++ b/public/scss/front.css
@@ -1,6 +1,1 @@
-p {
-  color: red;
-  font-weight: bold;
-  font-family: roboto;
-}
-/*# sourceMappingURL=front.css.map */
+/* No CSS *//*# sourceMappingURL=front.css.map */
