--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -7,28 +7,27 @@
       <div class="container-fluid">
           <%- include('./partials/header') %>
           <%- include('./partials/navbar') %>
-
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h3>USUARIO: <%= user.email %> </h3>
-            <h4>COMPRA N°: <%= carrito.id %></h4>
-            <table class="table table-borderless-dark mt-4">
+
+            <table class="table table-borderless-dark mt-4 table-cart">
               <thead>
                 <tr class="dark">
-                  <th scope="col">Id</th>
-                  <th scope="col">Nombre</th>
-                  <th scope="col">Precio</th>
-                  <th scope="col"></th>
+                  <th class="d-none d-sm-block" scope="col">Id</th>
+                  <th class= "nombre" scope="col">Nombre</th>
+                  <th class="precio" scope="col">Precio</th>
+                  <th class="eliminar" scope="col" width="30"></th>
                 </tr>
                 </thead>
                 <tbody>
                 <% cartGameLista.forEach(element => { %>
                 <tr>
-                  <th scope="row"><%= element.game_id %></th>
-                  <td><%= element.games.name %></td>
-                  <td>ARS <%= element.price %></td>
-                  <td><a href="/cart/delete/<%= element.id %>"><svg width="24px" height="24px" viewBox="0 0 24 24" class="bi bi-trash" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <th class="d-none d-sm-block" scope="row"><%= element.game_id %></th>
+                  <td class="nombre"><%= element.games.name %></td>
+                  <td class="precio">ARS <%= element.price %></td>
+                  <td class="eliminar" width="30"><a href="/cart/delete/<%= element.id %>"><svg width="24px" height="24px" viewBox="0 0 24 24" class="bi bi-trash" fill="#000000" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                     <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                   </svg></a></td>
@@ -38,20 +37,19 @@
             </table>
           </div>
         </div>
-        <hr>
         <div class="row">
-          <div class="col-12 text-right">
+          <div class="col-12 text-right text-center-xs ">
             <h3>TOTAL: ARS <%= carrito.total %></h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-12 text-right">
+          <div class="col-12 text-right text-center-xs">
             <a href="/" target="_self" class="btn btn-secondary mb-4">Seguir comprando</a>
           </div>
         </div>
         <!--Finalizar compra (redirige al checkout)-->
         <div class="row">
-          <div class="col-12 text-right">
+          <div class="col-12 text-right text-center-xs mb-5">
             <form action="/cart/closed" method="post">
               <input type="hidden" name="cart_name" value="<%= carrito.id %> ">
               <button class="btn btn-success" type="submit">Finalizar Compra</button>
@@ -60,9 +58,10 @@
         </div>
       </div>
     
-    </div>
     
+    <div class="container-fluid">
     <%- include('./partials/footer') %> 
     <%- include('./partials/scripts') %>
+    </div>
   </body>
 </html>
