--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,33 +37,19 @@
         <section class="row justify-content-around">
           <!-- TITTLE PRODUCT -->
           <div class="titulo-product col-12">
-          
-            <h5 class="estilo-fuente-1">🎮JUEGOS  <mark class="estilo-fuente-2">RECOMENDADOS</mark></h5>
-            
+            <h5 class="estilo-fuente-1">🎮JUEGOS  <mark class="estilo-fuente-2">RECOMENDADOS</mark></h5>  
           </div>
           
           <!--CAJA RECOMENDADOS-->
 
           <% for( let i = 0; i < recomendados.length; i++ ) { %>
             <div class="card col-dm-3 mb-3 text-center" style="width: 18rem;">
-              <img class="card-img-top" src="/images/product-games/<%= recomendados[i].image %>  " alt="Card image cap">
+              <img class="card-img-top" src="/images/product-games/<%= recomendados[i].image %>" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title"><%= recomendados[i].name %></h5>
-                            
-                  <%distributor.forEach(element => {%>
-                    <% if (element.id == recomendados[i].distributor_id) { %>
-                     
-                      <hr>
-                      <strong>Desarrollador: <%= element.name %></strong>
-                      <hr>
-                      
-                      <% } %>
-                    <%});%>
-                      
-                  </p>
                     <strong class="precio">$<%= recomendados[i].price %></strong>
-                    <hr>
-              <button onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary ">Comprar</a>
+                <a onclick="clickear(<%= recomendados[i].id %>)" class="btn btn-primary ">Comprar</a>
+              </div>
             </div>
             <% } %> 
           <!--CAJA RECOMENDADOS FINAL-->
@@ -80,16 +66,12 @@
             <% vendidos.forEach(masComprados => { %>
 
                 <div class="card text-center col-5 col-dm-3 col-lg-2 mb-3 mr-3" style="width: 18rem;">
-                  <img class="card-img-top" src="/images/product-games/<%= masComprados.image  %>   " alt="Card image cap">
+                  <img class="card-img-top" src="/images/product-games/<%= masComprados.image  %>" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title"><%= masComprados.name %> </h5>
-                  
-                  
-                  
-                    <strong class="precio">$<%= masComprados.price %> </strong>
-                    
+                    <strong class="precio">$<%= masComprados.price %> </strong> 
+                    <a onclick="clickear(<%= masComprados.id %>)" class="btn btn-primary">Comprar</a>
                   </div>
-                  <button onclick="clickear(<%= masComprados.id %>)" class="btn btn-primary">Comprar</a>
                 </div>
                 <% }) %>
               </div>
@@ -101,13 +83,11 @@
           <!--CAJA 1-->
           <% ofertas.forEach(oferta => { %>
             <div class="card text-center col-dm-3 mb-3" style="width: 18rem;">
-              <img class="card-img-top" src="/images/product-games/<%= oferta.image %>  " alt="Card image cap">
+              <img class="card-img-top" src="/images/product-games/<%= oferta.image %>" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title"><%= oferta.name %></h5>
-                            
-                 
                     <strong class="precio">$<%= oferta.price %></strong>
-                <button onclick="clickear(<%= oferta.id %>)" class="btn btn-primary">Comprar</a>
+                <a onclick="clickear(<%= oferta.id %>)" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           <% }) %>
@@ -151,8 +131,6 @@
         console.log(userLoggedFront)
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="js/alertCarritoVacio.js"></script>
 </body>
 
 </html>
